log
Fri Apr  8 15:47:13 UTC 2022: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:11: error: expected expression before ‘)’ token
     while(){
           ^
hashmap.c:49:17: error: statement with no effect [-Werror=unused-value]
     map->buckets[posicion]
     ~~~~~~~~~~~~^~~~~~~~~~
hashmap.c:50:3: error: expected ‘;’ before ‘}’ token
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
2ce0b22
Fri Apr  8 15:47:51 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   int posicion = hash(key,map->capacity);
       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3ffc857
Fri Apr  8 15:48:00 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3054525
Fri Apr  8 15:48:13 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eafce58
Fri Apr  8 16:10:46 UTC 2022: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:11: error: expected expression before ‘)’ token
     while(){
           ^
hashmap.c:51:25: error: statement with no effect [-Werror=unused-value]
   map->buckets[posicion]->key
   ~~~~~~~~~~~~~~~~~~~~~~^~~~~
hashmap.c:52:3: error: expected ‘;’ before ‘map’
   map->bucket
   ^~~
cc1: all warnings being treated as errors
Compilation failed
aa71474
Fri Apr  8 16:11:02 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7532c44
Sun Apr 10 23:04:32 UTC 2022: 
 hashmap.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
607417a
Sun Apr 10 23:05:27 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:13: error: operation on ‘map->size’ may be undefined [-Werror=sequence-point]
   map->size = map->size++;
   ~~~~~~~~~~^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
86dc623
Sun Apr 10 23:06:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
63b27e0
Sun Apr 10 23:07:13 UTC 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
07d8ec9
Sun Apr 10 23:09:12 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
2768798
Sun Apr 10 23:09:36 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
484c232
Sun Apr 10 23:28:05 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
425f239
Sun Apr 10 23:28:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
4817817
Sun Apr 10 23:32:31 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4889481
Sun Apr 10 23:34:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
386edf2
Sun Apr 10 23:34:10 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
b1789a4
Sun Apr 10 23:38:35 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
1537208
Sun Apr 10 23:39:50 UTC 2022: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  5|5
total_score: 20/70
9832702
Sun Apr 10 23:43:27 UTC 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
24651ea
Sun Apr 10 23:44:24 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
058464a
Sun Apr 10 23:44:57 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|5
total_score: 20/70
1a32eb7
Sun Apr 10 23:45:07 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|5
total_score: 20/70
65acf98
Sun Apr 10 23:46:33 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 20/70
54b0f8f
